# k8s-docs

./: .gitignore  .gitmodules  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
helm-kanban-v2/: db.yaml  postgres.yaml  pv-volume.yaml
helm-kanban-v2/app/: Chart.yaml  values.yaml
helm-kanban-v2/app/templates/: _helpers.tpl
helm-kanban/app/: Chart.yaml
source/: conf.py  index.md
source/getting-started/: 01-installation.md  02-dashboard.md  02-online-docs.md  04-k8s-api.md  05-pods.md  06-deployment.md  07-updates-rollbacks.md  08-daemonsets.md  09-labels-selectors.md  10-users.md  11-services.md  12-probes.md  13-volumes.md  14-configmaps.md  15-secrets.md  16-ingress.md
source/helm/: 01-setup.md  02-custom-chart.md  03-templating.md  04-persistence.md  05-helmfile.md
