[tool.poetry]
name = "k8s-docs"
version = "0.1.0"
description = "Documentation for setting up and using Kubernetes."
authors = ["Yin-Chi Chan <ycc39@cam.ac.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
Sphinx = "^7.4.7"
myst-parser = "^3.0.1"
sphinxcontrib-kroki = "^1.3.0"
sphinx-rtd-dark-mode = "^1.3.0"
setuptools = "^72.1.0"
sphinx-copybutton = "^0.5.2"


[tool.poetry.group.server.dependencies]
sphinx-serve = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
